# zoetrope

./: .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  mise.toml  release-please-config.json  release-plz.toml
.github/: formula.rb.tmpl
.github/workflows/: ci.yml  release.yml
crates/zoetrope-cli/: CHANGELOG.md  Cargo.toml
crates/zoetrope-cli/src/: args.rs  main.rs  progress_term.rs
crates/zoetrope-cli/tests/: cli.rs
crates/zoetrope-cli/tests/common/: mod.rs
crates/zoetrope-core/: Cargo.toml
crates/zoetrope-core/src/: encode.rs  ffmpeg.rs  fit.rs  lib.rs  options.rs  parse.rs  pipeline.rs  progress.rs  settings.rs
src/: cli.rs  encode.rs  fit.rs  main.rs  pipeline.rs  progress.rs
tests/: cli.rs
