[package]
name = "zoetrope"
version = "0.3.0"
edition = "2021"
description = "Convert .mov files to high-quality gifs using ffmpeg"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
gifski = { version = "1", default-features = false, features = ["png"] }
indicatif = "0.17"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
gif = "0.13"
