[package]
name = "zoetrope"
version = "0.5.0"
edition = "2021"
description = "Convert screen recordings to GIF or animated WebP"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
gifski = { version = "1", default-features = false, features = ["png"] }
indicatif = "0.17"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
gif = "0.13"
