[package]
name = "zoetrope-cli"
version.workspace = true
edition.workspace = true
description = "Convert screen recordings to GIF or animated WebP"
publish = false

[[bin]]
name = "zoetrope"
path = "src/main.rs"

[dependencies]
zoetrope-core = { path = "../zoetrope-core" }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
gif = "0.13"
tempfile = "3"
